# stupid-data-scrap-recycler

./: .gitignore  README.md  _pipeline_utils.py  batch_roboflow_gen_config.py  batch_run_profiles.py  coco_filter_wrap.py  filter_coco_category.py  filter_coco_category_wrap.py  filter_yolo_roboflow.py  filter_yolo_roboflow_wrap.py  gen_roboflow_filter_config.py  pipeline_utils.py  pyproject.toml  remap_yolo_labels.py  roboflow_filter_wrap.py  yolo_dedup.py  yolo_remap.py  yolo_to_labelme.py
configs/: crane_filter.toml  crane_filter_deduped.toml  filter_coco_category_profiles.toml  filter_yolo_roboflow_profiles.toml
configs/_template/: default_pipeline.toml
configs/example/: filter_coco_category_profiles.example.toml  filter_yolo_roboflow_profiles.example.toml
